--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
 Flask==2.1.2
+Flask-Cors==3.0.10
 Flask-WTF==1.0.1
 idna==3.3
 importlib-metadata==4.11.3
@@ -11,6 +12,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 python-dotenv==0.20.0
 requests==2.27.1
+six==1.16.0
 urllib3==1.26.9
 Werkzeug==2.1.2
 WTForms==3.0.1
