--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ colorama==0.4.4
 Flask==2.1.2
 Flask-Cors==3.0.10
 Flask-WTF==1.0.1
+gunicorn==20.1.0
 idna==3.3
 importlib-metadata==4.11.3
 itsdangerous==2.1.2
